# TextToSql

./: .dockerignore  .gitignore  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
config/: baseline_config.yaml  config.yaml
src/: dataset.py  logging_config.py  main.py  model_codebert.py  retrieve.py  train.py  utils.py
src/api/: api_inference.py
src/langchain/: agent.py  prompts.py  tools.py
src/middleware/: auth.py
tests/: test_data.py  test_inference.py  test_unit.py
