[project]
name = "text2sql-tfm"
version = "0.1.0"
description = "TFM Text-to-SQL"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "torch",
    "scikit-learn",
    "transformers",
    "datasets",
    "pandas",
    "pyarrow",
    "wandb",
    "numpy",
    "sqlalchemy",
    "pyyaml",
    "pytest",
    "langchain",
    "langchain-core",
    "langchain-anthropic",
    "fastapi",
    "uvicorn[standard]",
]
